# Ivalua-AI-Assistant

./: .gitignore  CONTRIBUTING.md  README.md  conport_launcher.cmd  conport_launcher.sh  pyproject.toml
.githooks/: pre-commit
.github/workflows/: import-documentation.yml  sync-custom-instructions.yml  validate-and-import.yml
.windsurf/workflows/: data.md  docu.md  mix.md  tips.md
context_portal/import_data/: doc_manifest.json
context_portal/scripts/: import_all_entries.py  import_documentation.py  rebuild_embeddings.py
entries/docs/: example.json  template.json
entries/schema/: example.json  template.json
entries/tips/: example.json  template.json
scripts/: bootstrap.cmd  bootstrap.sh  db_audit.py  fix_db_anomalies.py  fix_fts.py  install_hooks.py  sync_custom_instructions.py  validate_entries.py
